# Hamabead-Framework

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
client/: package.json
client/src/: App.tsx
src/: recognize.py  train.py
templates/static/css/: main.7eee7308.css
templates/static/js/: main.ce3b9ce4.js
